--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -44,8 +44,8 @@ $drop-shadow-light-color: #999999;
 $drop-shadow-transparent-color: black;
 
 $warning-color: #E1B412;
-$error-color: #E11912;
 $focus-color: #ff5ac0;
+$error-color: $focus-color;
 
 /*
  * Fonts
